# goodmem-crewai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_example.py
src/crewai_goodmem/: __init__.py  tools.py
tests/: test_e2e.py  test_tools.py
